# ai-skills

./: .gitignore  AGENTS.md  README.md  pyproject.toml  review.md
review/: 5.3 codex.md  claude.md  gpt 5.4.md  skills-review.md
skills/design-chain/: SKILL.md
skills/design-chain/agents/: openai.yaml
skills/design-chain/scripts/: run_design_chain.py
skills/engineering-chain/: SKILL.md
skills/engineering-chain/agents/: openai.yaml
skills/engineering-chain/scripts/: run_engineering_chain.py
skills/full-suite/: SKILL.md
skills/full-suite/agents/: openai.yaml
skills/full-suite/scripts/: run_full_suite.py
skills/repo-analyzer/: SKILL.md
skills/repo-analyzer/agents/: openai.yaml
skills/repo-analyzer/scripts/: run_repo_analyzer.py
src/ai_skills_toolkit/: __init__.py  __main__.py  cli.py  design_chain.py  engineering_chain.py  full_suite.py  readiness.py
src/ai_skills_toolkit/core/: __init__.py  io.py  models.py  repo_scan.py  (+1 more)
tests/: conftest.py  test_architecture_designer.py  test_architecture_designer_eval.py  test_artifact_quality.py  test_cli.py  test_code_reviewer.py  test_code_reviewer_eval.py  test_core_io.py  test_deploy_helper.py  test_deploy_helper_eval.py  test_design_chain.py  test_doc_writer.py  test_doc_writer_eval.py  test_engineering_chain.py  test_figma_ui_architect.py  test_figma_ui_architect_eval.py  test_full_suite.py  test_metadata_contract.py  test_prompt_debugger.py  test_prompt_debugger_eval.py  test_readiness.py  test_repo_analyzer.py  test_repo_analyzer_eval.py  test_test_generator.py  test_test_generator_eval.py
(+70 files in other folders)
