[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "ai-skills-toolkit"
version = "0.2.0"
description = "Modular local skills toolkit for AI coding/design agents (phase 2)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ai-skills-toolkit contributors" }]
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[project.scripts]
ai-skills-toolkit = "ai_skills_toolkit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
